feat: Add browser entry point and process shim
Introduces the main application entry point (`index.tsx`) and updates `index.html` to include it. A shim for `window.process` is added to ensure browser compatibility, particularly for environment variables.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       background: linear-gradient(135deg, #f59e0b 0%, #dc2626 100%);
     }
   </style>
+  <script>
+    // Shim process for browser compatibility
+    window.process = window.process || { env: { API_KEY: "" } };
+  </script>
 <script type="importmap">
 {
   "imports": {
@@ -42,5 +46,7 @@
 </head>
 <body class="bg-[#020617] text-slate-300 min-h-screen">
   <div id="root"></div>
+  <!-- Entry point for the application -->
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
