--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
   <style>
     body { 
       font-family: 'Plus Jakarta Sans', sans-serif; 
-      background-color: #020617; /* Deep Slate 950 */
+      background-color: #020617; 
     }
     .mono { font-family: 'JetBrains Mono', monospace; }
     ::-webkit-scrollbar { width: 5px; }
@@ -24,29 +23,23 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    .brand-gradient {
-      background: linear-gradient(135deg, #f59e0b 0%, #dc2626 100%);
-    }
   </style>
-  <script>
-    // Shim process for browser compatibility
-    window.process = window.process || { env: { API_KEY: "" } };
-  </script>
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body class="bg-[#020617] text-slate-300 min-h-screen">
   <div id="root"></div>
-  <!-- Entry point for the application -->
-  <script type="module" src="index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
